<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_chat_delete_messages">Delete Messages</string>
	<string name="action_chat_send">Send</string>
	<string name="action_add_group">Add Group</string>
	<string name="action_attach_media">Attach Media</string>
	<string name="action_call_contact">Call Contact</string>
	<string name="action_contact_info">Contact Info</string>
	<string name="action_copy">Copy</string>
	<string name="action_delete_conversation">Delete Conversation</string>
	<string name="action_delete_conversations">Delete Conversations</string>
	<string name="action_login">Login</string>
	<string name="action_logout">Log Out</string>
	<string name="action_ok">OK</string>
	<string name="action_search">Search</string>
	<string name="alert_login_no_account">Username or password is incorrect.</string>
	<string name="alert_login_no_completed_data">Account data is not completed.</string>
	<string name="alert_login_no_server">Could not connect to server.</string>
	<string name="alert_error">Error!</string>
	<string name="app_name">Personal Assistant</string>
	<string name="text_abbreviation_extension">EXT</string>
	<string name="text_chat_available">Available</string>
	<string name="text_chat_input_hint">Type your message here</string>
	<string name="text_chat_me">Me</string>
	<string name="text_chat_service_chat_no_available">The service chat is not available.</string>
	<string name="text_chat_unavailable">Unavailable</string>
	<string name="text_chat_yesterday">Yesterday</string>
	<string name="text_contacts_list_searh_no_match">Your search did not match any contact.</string>
	<string name="text_conversations_list_searh_no_match">Your search did not match any conversation.</string>
	<string name="text_groups_list_searh_no_match">Your search did not match any group.</string>
	<string name="text_login_account_password">Password</string>
	<string name="text_login_account_username">Username</string>
	<string name="text_login_remember_password">Remember password</string>
	<string name="text_notification_conversations">conversations.</string>
	<string name="text_notification_messages_from">mesagges from</string>
	<string name="text_notification_new_messages">new messages.</string>
	<string name="text_connecting">Connecting</string>
	<string name="text_extension">Extension</string>
	<string name="text_extensions">Extensions</string>
	<string name="text_no_internet">No Internet</string>
	<string name="text_selected_contact">selected contact.</string>
	<string name="text_selected_contacts">selected contacts.</string>
	<string name="text_selected_message">selected message.</string>
	<string name="text_selected_messages">selected messages.</string>
	<string name="title_activity_contact_info">Contact Info</string>
	<string name="title_tab_chats_list">Chats</string>
	<string name="title_tab_contacts_list">Contacts</string>
	<string name="title_tab_groups_list">Groups</string>
</resources>